--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -59,6 +59,9 @@
     &__password {
       @extend .form__email;
     }
+    &__name {
+      @extend .form__email;
+    }
   }
   &__create {
     @include flexCenter(row);
